<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AboutActivity">


    <include
        android:id="@+id/top_bar"
        layout="@layout/activity_top_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="142dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/roboto"
        android:minWidth="200dp"
        android:text="@string/my_name"
        android:textAlignment="center"
        android:textColor="@color/textColorClick"
        android:textSize="@dimen/primary_text_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar" />

    <TextView
        android:id="@+id/linked_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:minWidth="200dp"
        android:text="@string/linked_id"
        android:textAlignment="center"
        android:textColor="@color/textColorClick"
        android:textSize="@dimen/primary_text_font_size"
        app:layout_constraintBottom_toTopOf="@+id/github_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_name" />

    <TextView
        android:id="@+id/github_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:minWidth="200dp"
        android:text="@string/github_account"
        android:textAlignment="center"
        android:textColor="@color/textColorClick"
        android:textSize="@dimen/primary_text_font_size"
        app:layout_constraintBottom_toTopOf="@+id/colombia_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linked_id" />

    <ImageView
        android:id="@+id/colombia_flag"
        android:layout_width="581dp"
        android:layout_height="302dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/logos"
        android:src="@drawable/logos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>