<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SingleSpacecraftsActivity">


    <include
        android:id="@+id/top_bar"
        layout="@layout/activity_top_bar"
        android:layout_width="1280dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_show_enxaneta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="sendEnxaneta"
        android:text="@string/button_show_enxaneta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="355dp"
        android:layout_height="355dp"
        app:layout_constraintBottom_toTopOf="@+id/button_show_starlink"
        app:layout_constraintEnd_toStartOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:srcCompat="@drawable/starlink_framed" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="355dp"
        android:layout_height="355dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:srcCompat="@drawable/iss_framed2" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="355dp"
        android:layout_height="355dp"
        app:layout_constraintBottom_toTopOf="@+id/button_show_enxaneta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:srcCompat="@drawable/enxaneta_framed2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="sendISS"
        android:text="@string/button_show_iss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <Button
        android:id="@+id/button_show_starlink"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_x="0dp"
        android:layout_y="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="sendStarlink"
        android:text="@string/button_show_starlink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

</androidx.constraintlayout.widget.ConstraintLayout>